-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0 Beta1
-
None
-
Red Hat Enterprise
-
e0be9ed761e730bec7b26bcaba014f028f6340d0
I have a PCI express card that provides serial ports. The new SysFS detection code in QtSerialPort doesn't appear to be able to detect them. Previous versions of QtSerialPort would enumerate them correctly.
Worked around it by disabling the macro around the sysfs detection code but looks like it would probably work if I added (targetPath.contains(QStringLiteral("pci")) in the detection block.
Listing from /sys/class/tty/ttyS*
[linville@host ~]$ ls -la /sys/class/tty/ttyS* lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS0 -> ../../devices/pnp0/00:04/tty/ttyS0 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS1 -> ../../devices/pnp0/00:05/tty/ttyS1 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS2 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS2 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS3 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS3 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS4 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS4 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS5 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS5 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS6 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS6 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS7 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS7 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS8 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS8 lrwxrwxrwx 1 root root 0 Nov 21 08:27 /sys/class/tty/ttyS9 -> ../../devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS9
Udevadm Output
[root@host linville]# udevadm info --name /dev/ttyS2 -a looking at device '/devices/pci0000:80/0000:80:02.0/0000:82:00.0/tty/ttyS2': KERNEL=="ttyS2" SUBSYSTEM=="tty" DRIVER=="" looking at parent device '/devices/pci0000:80/0000:80:02.0/0000:82:00.0': KERNELS=="0000:82:00.0" SUBSYSTEMS=="pci" DRIVERS=="serial" ATTRS{vendor}=="0x494f" ATTRS{device}=="0x10a9" ATTRS{subsystem_vendor}=="0x0000" ATTRS{subsystem_device}=="0x0000" ATTRS{class}=="0x070002" ATTRS{irq}=="56" ATTRS{local_cpus}=="ffffff" ATTRS{local_cpulist}=="0-23" ATTRS{modalias}=="pci:v0000494Fd000010A9sv00000000sd00000000bc07sc00i02" ATTRS{numa_node}=="-1" ATTRS{enable}=="1" ATTRS{broken_parity_status}=="0" ATTRS{msi_bus}=="" looking at parent device '/devices/pci0000:80/0000:80:02.0': KERNELS=="0000:80:02.0" SUBSYSTEMS=="pci" DRIVERS=="pcieport" ATTRS{vendor}=="0x8086" ATTRS{device}=="0x3c04" ATTRS{subsystem_vendor}=="0x0000" ATTRS{subsystem_device}=="0x0000" ATTRS{class}=="0x060400" ATTRS{irq}=="86" ATTRS{local_cpus}=="ffffff" ATTRS{local_cpulist}=="0-23" ATTRS{modalias}=="pci:v00008086d00003C04sv00000000sd00000000bc06sc04i00" ATTRS{numa_node}=="-1" ATTRS{enable}=="2" ATTRS{broken_parity_status}=="0" ATTRS{msi_bus}=="1" looking at parent device '/devices/pci0000:80': KERNELS=="pci0000:80" SUBSYSTEMS=="" DRIVERS==""
For Gerrit Dashboard: QTBUG-35064 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72149,2 | Fix the detection of PCI serial ports with sysfs and without udev | release | qt/qtserialport | Status: MERGED | +2 | 0 |